--- a/css/ma.css
+++ b/css/ma.css
@@ -18,7 +18,7 @@ html, body {
 
 .header {
     background-color: #F5A566;
-    padding: 1.2em 3em 0 3em;
+    padding: 1.2em 0.3em 0 3em;
 }
 
 .footer {
@@ -84,7 +84,11 @@ html, body {
 }
 
 .page-header1, .page-subheader {
-    margin: 0; padding: 0;
+    margin: 0; padding: 0; z-index: 10;
+}
+
+.page-subheader {
+    display: inline-block;
 }
 
 a, a:hover {
@@ -120,3 +124,21 @@ a, a:hover {
     min-width: 5em;
     margin-right: 1em;
 }
+
+.control-form {
+    background-color: #F5A566;
+    float: right;
+}
+
+.control-element {
+    float: right;
+    margin: 0 0 0 1em;
+}
+
+/*.header-animation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+}*/
